@@ -4,7 +4,7 @@
 
 = randgen(1)
 // Specify in UTC.
-:docdate: 2025-03-24
+:docdate: 2025-03-25
 :revnumber: 0.1.3
 :doctype: manpage
 :icons: font
@@ -248,6 +248,9 @@ bytes specified in the _BYTES_ positional argument.
 *-p*, *--progress*::
 
   Print information showing the progress of the generation of random bytes.
++
+NOTE: This option is ignored when the generated bytes are output to a
+terminal/tty.
 
 *-h*, *--help*::
 
