@@ -68,6 +68,9 @@ pub struct Opt {
 
     /// Print information showing the progress of the generation of random
     /// bytes.
+    ///
+    /// This option is ignored when the generated bytes are output to a
+    /// terminal/tty.
     #[arg(short, long)]
     pub progress: bool,
 
