@@ -14,6 +14,13 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/v0.1.3\...HEAD[Unreleased]
+
+=== Changed
+
+* Change this option to be ignored when the generated bytes are output to a
+  terminal/tty ({pull-request-url}/25[#25])
+
 == {compare-url}/v0.1.2\...v0.1.3[0.1.3] - 2025-03-24
 
 === Added
